        - All information is from main.js, editing pages to add a tag to the list is no longer needed

01-04-2023 :
    - Newest and ALL MONTH PAGES update AUTOMATICALLY!!!
    - Tag pages may have this in the future

01-09-2023 : 
    - Tag and Topic pages update automatically
    - Google Analytics is now active

01-10-2023 :
    - Home page boxes are automated

01-11-2023 :
    - Article pages "Tags on this" box is fully automated based on current page

01-13-2023 :
    - Article lists now display each article's individual tags

02-06-2023 : 
    - Article builder in development

02-10-2023 :
    - Fixed article images overlapping text (temporary fix)
        - Images are now above rather than next to the text (want to fix this eventually)
    - Computers topic!

02-16-2023 : 
    - Articles can now be made with article builder

02-27-2023 :
    - Improved contrast of links from background

03-08-2023 :
    - Changed hover color of links to green to improve contrast

03-09-2023 :
    - Fixed consistency of new hover color across all links on the site
    - Made hover color of articles brighter instead of darker to help text stand out more
    - Brightened background color of articles
    - Increased size of article text

03-15-2023 :
    - Made background hover color easier to look at

03-23-2023 :
    - Added automatic dark mode (changes with OS settings)

03-27-2023 :
    - New home page with topic separators and "scroll to bottom" button

0-30-2023 :
    - Added "Software" topic
    - Articles can now have more than one topic
    - Color of article box tags now changes when hovering to better convey that it is a link
03-31-2023 :
    - Images are finally back to the correct position on the side of the text in article boxes!

04-04-2023 :
    - Improved consistency of text color in dark mode
    - Fixed links on home page being unclickable
    - [ISSUE] Home scroll button appears behind home links on smaller displays