@@ -116,6 +116,13 @@
             <script>
               changeBox(
                 "April",
+                "17",
+                "2023",
+                "Removed scroll button-Reduced empty space between home topics"
+              );
+              changeBox("April", "5", "2023", "Updated design of dark mode");
+              changeBox(
+                "April",
                 "4",
                 "2023",
                 "Improved consistency of text color in dark mode-Fixed links on home page being unclickable-[ISSUE] Home scroll button appears behind home links on smaller displays"
