@@ -103,7 +103,7 @@
         <div class="header-line"><hr /></div>
       </div>
       <div class="row"></div>
-      <div style="
+      <!--<div style="
         z-index:0;
         display:flex;
         flex-wrap: wrap-reverse;
@@ -120,7 +120,7 @@
         background-color:rgb(51, 51, 51);">
       <img src="/img/down.png" style="max-width:100%;"></button>
       
-    </div>
+    </div>-->
     <div class="row homehead"><div class="col-md-2"></div><div class="col-md-3"><h2><br>Phones</h2></div></div>
     <div class="container container-grid" id="phones">
       <script>
@@ -131,20 +131,20 @@
       </script>
     </div>
     <div class="row homehead"><div class="col-md-2"></div><div class="col-md-3"><h2><br>Tablets</h2></div></div>
-    <div class="container container-grid" id="tablets">
+    <div class="container" id="tablets">
       <script>
         homeTopic(2,"tablets");
       </script>
     </div>
     <div class="row homehead" ><div class="col-md-2"></div><div class="col-md-3"><br><h2>Wearables</h2></div></div>
-    <div class="container container-grid" id="wearables">
+    <div class="container" id="wearables">
       <script>
         homeTopic(3, "wearables");
         homeTopic(4 , "wearables");
       </script>
     </div>
     <div class="row homehead" ><div class="col-md-2"></div><div class="col-md-3"><br><h2>Computers</h2></div></div>
-    <div class="container container-grid" id="computers">
+    <div class="container" id="computers">
       <script>
         homeTopic(5, "computers");
         homeTopic(10 , "computers");
